# KUSoccer

./: .env  .gitignore  KU.db  README.md  database.py  init_db.py  main.py  models.py  poetry_show.txt  pyproject.toml  requirements.txt  result.txt  test.py
control_unit/: init_db.py  test_unit.py
domain/: security.py
domain/admin/: admin_crud.py  admin_router.py  admin_schema.py
domain/crew/: crew_crud.py  crew_router.py  crew_schema.py
domain/match/: match_crud.py  match_router.py  match_schema.py
domain/post/: post_crud.py  post_router.py  post_schema.py
domain/user/: user_crud.py  user_router.py  user_schema.py
