[project]
name = "kusoccer"
version = "0.1.0"
description = ""
authors = [
    {name = "shinheewon",email = "shinheewon@korea.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn (==0.34.3)",
    "sqlalchemy (==2.0.41)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "click (==8.2.1)",
    "h11 (==0.16.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)",
    "python-jose (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
